--- a/spec/Generics.tex
+++ b/spec/Generics.tex
@@ -327,7 +327,7 @@ The common idiom of parameterizing a collection-oriented data type by
 a single element type has special syntactic support given by
 \begin{syntax}
 of-type:
-  type `of' type
+  type-specifier `of' type-specifier
 \end{syntax}
 This syntax is a short-hand for passing the second type by name
 \chpl{eltType} as the only argument to the first type.  Given the
@@ -359,7 +359,7 @@ second function is instantiated the where clause evaluates to false.
 \end{example}
 
 \subsection{User-Defined Compiler Errors}
-\label{User-Defined_Compiler_Errors}
+\label{User_Defined_Compiler_Errors}
 \index{compiler errors!user-defined}
 
 The special compiler error statement given by
