--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -251,7 +251,7 @@ characters:
   character characters
 
 character:
-  any-character
+  `any-character-except-newline'
 \end{syntax}
 
 \begin{status}
