--- a/spec/Modules.tex
+++ b/spec/Modules.tex
@@ -116,7 +116,7 @@ the use statement as defined in~\rsec{The_Use_Statement}.
 
 All symbols can be named explicitly with the following syntax:
 \begin{syntax}
-module-named-identifier:
+module-access-expression:
   module-identifier-list . identifier
 
 module-identifier-list:
