Added Jim Dinan to spec acknowledgments.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12812 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Acknowledgments.tex
+++ b/spec/Acknowledgments.tex
@@ -4,7 +4,7 @@
 We would like to recognize the following people for their efforts and
 impact on the Chapel language and its implementation---David Callahan,
 Hans Zima, John Plevyak, Shannon Hoffswell, Roxana Diaconescu, Mark
-James, Mackale Joyner, and Robert Bocchino.
+James, Mackale Joyner, Robert Bocchino, and James Dinan.
 
 Chapel is a derivative of a number of parallel and distributed
 languages and takes ideas directly from them.  These include the MTA
