Removed pragma and goto from list of keywords.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@12824 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -102,7 +102,8 @@ compilerError
 config
 const
 continue
-\end{chapel} & \begin{chapel}
+\end{chapel} &
+\begin{chapel}
 def
 distributed
 do
@@ -111,11 +112,11 @@ else
 enum
 for
 forall
-goto
 if
 in
-\end{chapel} & \begin{chapel}
 index
+\end{chapel} &
+\begin{chapel}
 inout
 label
 let
@@ -126,9 +127,9 @@ on
 ordered
 otherwise
 out
-\end{chapel} & \begin{chapel}
 param
-pragma
+\end{chapel} &
+\begin{chapel}
 record      
 reduce      
 return      
@@ -138,9 +139,10 @@ serial
 single      
 sparse
 subdomain
-\end{chapel} & \begin{chapel}
 sync        
 then        
+\end{chapel} &
+\begin{chapel}
 type        
 union       
 use         
@@ -149,6 +151,9 @@ when
 where       
 while       
 yield
+$$
+$$
+$$
 \end{chapel} \\
 \begin{invisible}
 compilerError
